--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -1,8 +1,8 @@
 \documentclass [11pt,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{float}
 \input{commandsFile}
+\setlength{\headheight}{13.6pt}
 
 \begin{document}
 
@@ -38,9 +38,9 @@
             \textbf{Title:} & Requirement Analysis and Verification Document \\ 
             \textbf{Authors:} & Lorenzo Ricci, Matteo Giovanni Paoli, Samuele Grisoni \\ 
             \textbf{Version:} & 1.0 \\ 
-            \textbf{Date:} & 31-January-2016 \\ 
+            \textbf{Date:} & insert date here \\ 
             \textbf{Download page:} & \url{https://github.com/Slaitroc/RicciPaoliGrisoni/} \\ 
-            \textbf{Copyright:} & Copyright © 2017, Ricci, Paoli, Grisoni – All rights reserved \\ \hline
+            \textbf{Copyright:} & Copyright © 2024, Ricci, Paoli, Grisoni – All rights reserved \\ \hline
         \end{tabularx}
     \end{table}
     
