--- a/Latex/Files/introduction.tex
+++ b/Latex/Files/introduction.tex
@@ -8,9 +8,9 @@ In the meantime, Student\&Company will also provide a series of Suggestions to i
 \item Students would like to autonomously candidate for available internships.
 \item Students would like to be matched with internships they might be interested in.
 \item Companies would like to perform interviews with suitable students.
-\item Students and companies would like to complain, communicate problems, and provide information about an ongoing internship.
+\item Students and companies would like to complain, communicate problems, and provide information about an Ongoing Internship.
 \item Students and companies would like to be provided with suggestions about how to improve their submission;
-\item Universities would like to handle complaints about ongoing internships.
+\item Universities would like to handle complaints about Ongoing Internships.
 \item Students would like to choose which internship to attend from among those for which they passed the interview.
 \item Companies would like to select students for the internship position among those who passed the interview.
  
@@ -26,14 +26,14 @@ The main features to provide in order to satisfy all the goals are the following
         \item Students can spontaneously apply to;
         \item Recommendation process consider while looking for matches.
     \end{itemize}
-\item {\color{titleColor}Insert CV:}\\ Students can provide the platform with their CV that Recommendation process will consider while looking for matches.
+\item {\color{titleColor}Insert CV:}\\ Students can provide the platform with their CV that Recommendation Process will consider while looking for matches.
 \item {\color{titleColor}Spontaneous Application:}\\ Students can autonomously apply for an available internship offer.
 %\item {\color{titleColor}Spontaneous Application Acceptance:}\\ Companies can accept a spontaneous application sent by a Student.
 \item {\color{titleColor}Recommendation Process:}\\ The platform automatically finds matches between available CV and Internships. At the end of the process, provides Students and Companies with a match they can accept or refuse.
 %\item {\color{titleColor}Matches and Application Monitoring:}\\
 %Students and Companies can see and interact with spontaneous applications and  matches concerning them.
 \item {\color{titleColor}Interview Process:}\\
-    Companies can interview both Student whose Spontaneous Application has been accepted, and Students that accepted a match found by Recommendation Process the company has accepted too, by providing them with Interview. The outcome of the Interview finalizes the selection process that can lead to a confirmed internship experience.  
+    Companies can interview both Student whose Spontaneous Application has been accepted, and Students that accepted a match found by the Recommendation Process the company has accepted too. The outcome of the Interview finalizes the selection process that can lead to a confirmed internship experience.  
 {%\item {\color{titleColor}Match Acceptance:}\\ Students and Companies can accept a match proposed by the Recommendation Process.
 %\item {\color{titleColor}Interview Management:}\\
     %Companies can create template interviews and start the Interview process with:
@@ -58,7 +58,7 @@ The main features to provide in order to satisfy all the goals are the following
     University can monitor a confirmed Internship and handle complaints, communicated problems and provided information.
     Handling a complaint, the University can decide to interrupt the Internship.
 \item {\color{titleColor}Suggestion Mechanism:}\\
-    The platform provide suggestion to both Students and Companies about the manner they respectively provide it with their CV and Internships. The suggestion achievement is to allow Students and Companies to perform better in Recommendation Process.
+    The platform provide suggestion to both Students and Companies about the manner they insert respectively their CV and Internships. The suggestion achievement is to allow Students and Companies to perform better in Recommendation Process.
 \end{itemize}
 
 \subsubsection{World Phenomena}
@@ -71,13 +71,13 @@ The main features to provide in order to satisfy all the goals are the following
 \item A company wants to interview a student.
 \item A company wants to manage (create, visualize, send, evaluate) its interviews.
 \item A student wants to answer questions concerning an interview.
-\item A company wants to complain, communicates problem, provide information about an ongoing internship.
-\item A student wants to complain, communicates problem, provide information about an ongoing internship.
+\item A company wants to complain, communicates problem, provide information about an Ongoing Internship.
+\item A student wants to complain, communicates problem, provide information about an Ongoing Internship.
 \item A student wants to receive suggestions on how to improve his CV.
 \item A company wants to receive suggestions on how to improve their internship offers.
-\item A university wants to monitor an ongoing internship that involves one of their students.
-\item A university wants to handle complaints about an ongoing internship that involves one of their students.
-\item A university wants to interrupt an ongoing internship that involves one of their students.
+\item A university wants to monitor an Ongoing Internship that involves one of their students.
+\item A university wants to handle complaints about an Ongoing Internship that involves one of their students.
+\item A university wants to interrupt an Ongoing Internship that involves one of their students.
 \item A company wants to choose from the students they are interested in the ones to whom they will offer the internship position.
 \item A student wants to choose an internship position offer.
 
@@ -96,8 +96,8 @@ The main features to provide in order to satisfy all the goals are the following
 \item A student answers questions related to an interview.
 \item A company sends to a student who passed the interview an internship position offer.
 \item A student accepts an internship position offer.
-\item A student or company complains, communicates problem, provides information about an ongoing internship.
-\item A university answers to complaints about ongoing internships that involves one of their students.
+\item A student or company complains, communicates problem, provides information about an Ongoing Internship.
+\item A university answers to complaints about Ongoing Internships that involves one of their students.
 \item A university interrupts an internship that involves one of their students.
 \end{enumerate}
 \paragraph{Shared - By Machine}
@@ -109,7 +109,7 @@ The main features to provide in order to satisfy all the goals are the following
 \item The platform notifies students and companies when a suitable recommendation involving them is found.
 \item The platform shows to companies information about their interviews.
 \item The platform provides students and companies suggestions about how to formulate better respectively their CV and internship offers.
-\item The platform shows to universities information about an ongoing internship.
+\item The platform shows to universities information about an Ongoing Internship.
 \item The platform notifies companies when there is a new spontaneous application regarding one of their internships.
 \item The platform notifies a student when a company accepts his spontaneous application.
 \item The platform notifies a student when a company sends to him a new interview.
@@ -117,10 +117,10 @@ The main features to provide in order to satisfy all the goals are the following
 \item The platform notifies a student when a company sends him an internship offer.
 \item The platform notifies a company when a student accepts his internship position offer.
 \item The platform notifies the involved student and the company when a university terminates their internship.
-\item The platform notifies the university when there is a new complaint or problem about an ongoing internship regarding one of their students.
+\item The platform notifies the university when there is a new complaint or problem about an Ongoing Internship regarding one of their students.
 
 \end{enumerate}
-\subsection{Definitions, Acronyms, Abbreviations}  
+\subsection{Definitions, Acronyms, Abbreviations} 
 This section offers explanations of terminology to elucidate the terms, acronyms and abbreviations used throughout the document, facilitating easy comprehension and reference for the readers.
 \subsubsection{Definition}
 \begin{itemize}
@@ -128,20 +128,24 @@ This section offers explanations of terminology to elucidate the terms, acronyms
     \item \textcolor{titleColor}{\textbf{Company}\label{def:company}}: A company that is registered on the S\&C platform.
     \item \textcolor{titleColor}{\textbf{Student}\label{def:student}}: A person who is currently enrolled in a University and is registered on the S\&C platform.
     \item \textcolor{titleColor}{\textbf{User}\label{def:user}}: Any registered entity on the S\&C platform.
-    \item \textcolor{titleColor}{\textbf{Internship}\label{def:internship}}: The offer of a position provided by a company to one or more students. The position for a single student is temporary, but the offer remains active until it is removed from the platform.
+    \item \textcolor{titleColor}{\textbf{Internship Offer}\label{def:internshipOffer}}: The offer of an opportunity to enroll in an internship provided by a Company. The offer remains active on the platform indefinitely until the publishing Company removes it
+    \item \textcolor{titleColor}{\textbf{Participant}}\label{def:participant}:{A Participant is an entity that interacts with the platform for the purpose of find or offering an Internship Position Offer, like Students and Companies
+    }
     \item \textcolor{titleColor}{\textbf{Recommendation Process}}\label{def:recommendationProcess}: The process of matching a Student with an Internship offered by a Company based on the Student's CV and the Internship's requirements made by the S\&C platform.
     \item \textcolor{titleColor}{\textbf{Recommendation/Match}\label{def:match}}: The result of the Recommendation Process. It is the match between a Student and an Internship.
     \item \textcolor{titleColor}{\textbf{Spontaneous Application}\label{def:spontaneousApplication}}: The process of a Student manually applying for an Internship that was not matched through the Recommendation Process.
     \item \textcolor{titleColor}{\textbf{Interview}\label{def:Interview}}: The process of evaluating a Student's application for an Internship done by a Company through the S\&C platform. 
-    \item \textcolor{titleColor}{\textbf{Feedback}\label{def:Feedback}}: Information provided by Students and Companies to the S\&C platform to improve the Recommendation Process.
-    \item \textcolor{titleColor}{\textbf{Suggestion}\label{def:suggestion}}: Information provided by the S\&C platform to Students and Companies to improve their CVs and Internship descriptions.
-    \item \textcolor{titleColor}{\textbf{Complaint}\label{def:complaint}}: A report of a problem or issue that a Student or Company has with an ongoing Internship. It can be published on the platform and handled by the University.
+    \item \textcolor{titleColor}{\textbf{Feedback}\label{def:Feedback}}: Information provided by Participant to the S\&C platform to improve the Recommendation Process.
+    \item \textcolor{titleColor}{\textbf{Internship Position Offer}\label{def:internshipPositionOffer}}: The formal offer of an internship position presented to a student who has successfully passed the Interview, who can decide to accept or reject it.
+    \item \textcolor{titleColor}{\textbf{Suggestion}\label{def:suggestion}}: Information provided by the S\&C platform to Participant to improve their CVs and Internship descriptions.
+    \item \textcolor{titleColor}{\textbf{Confirmed Internship}\label{def:confirmdInternship}}: An Internship that has been accepted by the Student and the offering Company.
+    \item \textcolor{titleColor}{\textbf{Ongoing Internship}\label{def:ongoing}}: A internship that is currently in progress. All Ongoing Internships are Confirmed Internships, but the vice versa is not always true.
+    \item \textcolor{titleColor}{\textbf{Complaint}\label{def:complaint}}: A report of a problem or issue that a Student or Company has with an Ongoing Internship. It can be published on the platform and handled by the University.
     \item \textcolor{titleColor}{\textbf{Confirmed Match}\label{def:confirmedMatch}}: A match that has been accepted by both a Student and a Company.
     \item \textcolor{titleColor}{\textbf{Rejected Match}\label{def:rejectedMatch}}: A match that has been refused by either a Student or a Company.
     \item \textcolor{titleColor}{\textbf{Pending Match}\label{def:pendingMatch}}: A match that has been accepted only by a Student or a Company, waiting for a response from the other party.
     \item \textcolor{titleColor}{\textbf{Unaccepted Match}\label{def:unacceptedMatch}}: A match that has been refused by either a Student or a Company.
-    \item \textcolor{titleColor}{\textbf{Confirmed Internship}\label{def:confirmdInternship}}: An Internship that has been accepted by the Student and the offering Company.
-    
+
     
     
 \end{itemize}
@@ -194,10 +198,10 @@ This section offers explanations of terminology to elucidate the terms, acronyms
 
 \subsection{Document Structure}
 \begin{enumerate}
-    \item \textbf{Introduction}: This section provides an overview of the document and the system. Here the purpose of the platform is explained, along with the goals and phenomena of the system. Finally, essential definitions are provided.
-    \item \textbf{Overall Description}: In this section, a high-level perspective of the system is provided, describing its overall purpose, functionality, and \hyperref[def:user]{User} interactions. It includes an outline of the system's intended features, user profiles, and assumptions about the domain.
-    \item \textbf{Specific Requirements}: In this section, we focus on the technical and functional details of the system. Here, the external interfaces are specified as well as the functional and non-functional requirements of the system. Diagrams, such as use case and sequence diagrams, have been used to provide a visual representation of the system's functionality.
-    \item \textbf{Alloy}: This section illustrates code and diagrams of the Alloy formal specification language that has been used to ensure the consistency and correctness of the system's formalized requirements.
-    \item \textbf{Effort Spent}: This section provides an overview of the time spent by each group member on the project.
-    \item \textbf{References}: This section provides a list of references used in the document.
+    \item \textcolor{titleColor}{\textbf{Introduction}}: This section provides an overview of the document and the system. Here the purpose of the platform is explained, along with the goals and phenomena of the system. Finally, essential definitions are provided.
+    \item \textcolor{titleColor}{\textbf{Overall Description}}: In this section, a high-level perspective of the system is provided, describing its overall purpose, functionality, and \hyperref[def:user]{User} interactions. It includes an outline of the system's intended features, user profiles, and assumptions about the domain.
+    \item \textcolor{titleColor}{\textbf{Specific Requirements}}: In this section, we focus on the technical and functional details of the system. Here, the external interfaces are specified as well as the functional and non-functional requirements of the system. Diagrams, such as use case and sequence diagrams, have been used to provide a visual representation of the system's functionality.
+    \item \textcolor{titleColor}{\textbf{Alloy}}: This section illustrates code and diagrams of the Alloy formal specification language that has been used to ensure the consistency and correctness of the system's formalized requirements.
+    \item \textcolor{titleColor}{\textbf{Effort Spent}}: This section provides an overview of the time spent by each group member on the project.
+    \item \textcolor{titleColor}{\textbf{References}}: This section provides a list of references used in the document.
 \end{enumerate}
