Updates from Overleaf

--- a/Latex/Files/requirements.tex
+++ b/Latex/Files/requirements.tex
@@ -1,38 +1,34 @@
 \subsection{External Interface Requirements}
 This chapter provides a detailed description of the system's external interfaces such as the User, Hardware, Software, and Communication interfaces. 
 \subsubsection{User Interfaces}
+The user interface will be designed to improve intuitiveness and simplicity. The platform root page is the Home Page from which every non-registered user can find information about the platform such as the latest news. The Home page is linked to other pages such as Dashboard, Contacts, and About by an App Bar. 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{Latex/Images/HomePage.png}
     \caption{UI Home Page}
     \label{fig:homepage}
 \end{figure}
-\clearpage
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth]{Latex/Images/AboutPage.png}
-    \caption{UI About Page}
-    \label{fig:aboutpage}
-\end{figure}
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{Latex/Images/ContactPage.png}
-    \caption{UI Contact Page}
+    \caption{UI Contacts Page}
     \label{fig:contactpage}
 \end{figure}
+\noindent Thanks to the app bar link buttons users can also reach the Sign-Up and Sign-in pages. The Sign-Up page allows for different types of sign-up according to the new user type.
 \begin{figure}[H]
     \includegraphics[width=0.33\textwidth]{Latex/Images/StudentSignUp.png}
     \includegraphics[width=0.33\textwidth]{Latex/Images/CompanySignUp.png}
     \includegraphics[width=0.33\textwidth]{Latex/Images/UniversitySignUp.png}
-    \caption{UI SignUp Page}
+    \caption{UI Sign-Up Page}
     \label{fig:signuppage}
 \end{figure}
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{Latex/Images/SignInPage.png}
-    \caption{UI SignIn Page}
+    \caption{UI Sign-In Page}
     \label{fig:signinpage}
 \end{figure}
+The Dashboard page will be the central hub for logged-in users. From the left-hand panel of the dashboard, all the pages associated with the core functionality of the platform are reachable. Therefore, this page is provided after a successful log-in.
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{Latex/Images/Dashboard.png}
