--- a/Latex/commandsFile.tex
+++ b/Latex/commandsFile.tex
@@ -137,6 +137,7 @@
 \usepackage{xspace}
 \usepackage{amssymb}
 \usepackage[pdftex, colorlinks=true, linkcolor=black, urlcolor=blue, citecolor=green]{hyperref}
+\usepackage{listings}
 
 \newcommand{\comment}[1]{{\color{Red}$\blacktriangleright$ Comment: #1 $\blacktriangleleft$}}
 
