--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -2,6 +2,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \input{commandsFile}
+\usepackage[dvipsnames]{xcolor}
+\usepackage{listings}
+\usepackage{alloy-style}
 \setlength{\headheight}{13.6pt}
 
 \begin{document}
