Alloy Syntax Highlight

--- a/Latex/Files/alloy.tex
+++ b/Latex/Files/alloy.tex
@@ -240,27 +240,27 @@ The following model was obtained with the following run:
 and represent a typical evolution of the system composed where it is possible to see the different entities, their relationships and the evolution of the status of such entities like Recommendation and Interview
 Such parameter for the run command were chosen to provide a clear and readable model that can be easily understood by the reader, but they can be easily modified to provide a more detailed or more general model. 
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.9\textwidth]{Alloy/AlloyImage/0.png}
+\begin{figure}[H]
+    \hspace{-2.5cm}
+    \includegraphics[width=1.3\linewidth]{Alloy/AlloyImage/0.png}
     \caption{Step 0: All Recommendations and Spontaneous Applications have been sent but have not yet been evaluated.}
     \label{fig:ALIMG0}
 \end{figure}
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.9\textwidth]{Alloy/AlloyImage/1.png}
+\begin{figure}[H]
+    \hspace{-2.5cm}
+    \includegraphics[width=1.3\linewidth]{Alloy/AlloyImage/1.png}
     \caption{Step 1: A Spontaneous Application has been accepted, and an Interview has been created}
     \label{fig:ALIMG1}
 \end{figure}
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.9\textwidth]{Alloy/AlloyImage/2.png}
+\begin{figure}[H]
+    \hspace{-2.5cm}
+    \includegraphics[width=1.3\linewidth]{Alloy/AlloyImage/2.png}
     \caption{Step 2: A Recommendation has been rejected by one of the party}
     \label{fig:ALIMG2}
 \end{figure}
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.9\textwidth]{Alloy/AlloyImage/3.png}
+\begin{figure}[H]
+    \hspace{-2.5cm}
+    \includegraphics[width=1.3\linewidth]{Alloy/AlloyImage/3.png}
     \caption{Step 3: Another Spontaneous Application has been accepted, and the first Interview has been sent. }
     \label{fig:ALIMG3}
 \end{figure}
