--- a/Latex/alloy-style.sty
+++ b/Latex/alloy-style.sty
@@ -9,6 +9,9 @@
       if, then, else, exactly, disj, fact, fun, module, abstract,
       extends, open, none, univ, iden, seq,
       for, as, sum,
+      always, eventually, after, triggered, since,
+      historically, once, before, releases, until,
+      var
   },
   literate=%
     *{:}{{{\color[HTML]{2835C0}{$\colon$}}}}1
